--- a/FourOperations/WpfFourOperationsApp/App.xaml
+++ b/FourOperations/WpfFourOperationsApp/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:WpfFourOperationsApp"
-             StartupUri="LoginWindoTest.xaml">
+             StartupUri="LoginWindow1.xaml">
     <Application.Resources>
          
     </Application.Resources>
