--- a/FourOperations/WpfFourOperationsApp/LoginWindow1.xaml
+++ b/FourOperations/WpfFourOperationsApp/LoginWindow1.xaml
@@ -5,9 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfFourOperationsApp"
         mc:Ignorable="d"
-        Title="LoginWindow1" Height="400" Width="300" Name="log" WindowStartupLocation="CenterScreen">
-    <Grid Background="White">
-        <Grid Width="300" Height="400">
+        Title="LoginWindow1" Height="443" Width="300" Name="log" WindowStartupLocation="CenterScreen">
+    <Grid Background="White" Height="432">
+        <Grid Width="300" Margin="0,10,0,61">
             <Border CornerRadius="3" HorizontalAlignment="Center" Width="300" Height="360" VerticalAlignment="Center" Background="White" >
                 <StackPanel Margin="0 50 0 0">
                     <Image Source="/logo.jpg" Width="102" Height="77" RenderTransformOrigin="0.5,0.5"  >
