--- a/FourOperations/UWPApp1/MainPage.xaml
+++ b/FourOperations/UWPApp1/MainPage.xaml
@@ -14,10 +14,10 @@
         <Button x:Name="HelpButton" Content="帮助" Margin="206,10,0,0" VerticalAlignment="Top" Width="69" Height="31" Background="White"/>
         <Button x:Name="RegardButton1" Content="关于" Margin="298,11,0,0" VerticalAlignment="Top" Width="69" Height="31" Background="White"/>
         <TextBlock x:Name="Name" HorizontalAlignment="Left" Margin="484,17,0,0" Text="衡光运算器" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="30" FocusVisualPrimaryBrush="#FF481919" Foreground="#FFD37828"/>
-        <Button x:Name="One" Content="一年级" Margin="392,66,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.16,0.573" Click="One_Click" Background="White"/>
-        <Button x:Name="Two" Content="二年级" Margin="484,66,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.244,0.596" Click="Two_Click" Background="White"/>
-        <Button x:Name="Three" Content="三年级" Margin="579,66,0,0" VerticalAlignment="Top" Click="Three_Click" Background="White"/>
-        <Button x:Name="Four" Content="四年级" Margin="675,66,0,0" VerticalAlignment="Top" Click="Four_Click" Background="White"/>
+        <ToggleButton x:Name="One" Content="一年级" Margin="392,66,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.16,0.573" Click="One_Click" Background="White" Checked="One_Checked"/>
+        <ToggleButton x:Name="Two" Content="二年级" Margin="484,66,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.244,0.596" Click="Two_Click" Background="White"/>
+        <ToggleButton x:Name="Three" Content="三年级" Margin="579,66,0,0" VerticalAlignment="Top" Click="Three_Click" Background="White"/>
+        <ToggleButton x:Name="Four" Content="四年级" Margin="675,66,0,0" VerticalAlignment="Top" Click="Four_Click" Background="White"/>
         <ListBox x:Name="listBox" Margin="31,226,907,0" Visibility="Visible" Height="393" VerticalAlignment="Top"/>
         <TextBox x:Name="Text1" HorizontalAlignment="Left" Margin="411,238,0,0" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="109"/>
         <TextBox x:Name="Text2" HorizontalAlignment="Left" Margin="410,275,0,0" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="109" RenderTransformOrigin="-0.035,0.645"/>
@@ -32,19 +32,19 @@
         <TextBlock x:Name="Hint" HorizontalAlignment="Left" Margin="410,203,0,0" Text="请按顺序答题哦~" TextWrapping="Wrap" VerticalAlignment="Top"/>
         <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Margin="765,143,0,0" Text="您好【XXX】！" TextWrapping="Wrap" VerticalAlignment="Top" Height="28" Width="135"/>
         <Rectangle HorizontalAlignment="Left" Height="136" Margin="744,338,0,0" Stroke="Black" VerticalAlignment="Top" Width="224"/>
-        <Button x:Name="Multiplication" Content="乘法" Margin="756,390,0,0" VerticalAlignment="Top" Width="71" Background="White" BorderBrush="#FF656161" IsEnabled="False" Click="Multiplication_Click"/>
-        <Button x:Name="Division" Content="除法" Margin="878,390,0,0" VerticalAlignment="Top" Width="74" Background="White" BorderBrush="#FF827D7D" RenderTransformOrigin="-2.334,0.533" IsEnabled="False" Click="Division_Click_1"/>
-        <Button x:Name="Mixture" Content="混合运算" Margin="756,433,0,0" VerticalAlignment="Top" Width="83" BorderBrush="#FF7D7979" Background="White" IsEnabled="False" Click="Mixture_Click_1"/>
-        <Button x:Name="Arithmetic1" Content="四则运算" Margin="866,433,0,0" VerticalAlignment="Top" Width="86" Background="White" BorderBrush="#FF7C7878" RenderTransformOrigin="0.001,0.685" IsEnabled="False" Click="Arithmetic1_Click"/>
+        <ToggleButton x:Name="Multiplication" Content="乘法" Margin="756,390,0,0" VerticalAlignment="Top" Width="71" Background="White" BorderBrush="#FF656161" IsEnabled="False" Click="Multiplication_Click" Checked="Multiplication_Checked"/>
+        <ToggleButton x:Name="Division" Content="除法" Margin="878,390,0,0" VerticalAlignment="Top" Width="74" Background="White" BorderBrush="#FF827D7D" RenderTransformOrigin="-2.334,0.533" IsEnabled="False" Click="Division_Click_1" Checked="Division_Checked"/>
+        <ToggleButton x:Name="Mixture" Content="混合运算" Margin="756,433,0,0" VerticalAlignment="Top" Width="83" BorderBrush="#FF7D7979" Background="White" IsEnabled="False" Click="Mixture_Click_1" Checked="Mixture_Checked"/>
+        <ToggleButton x:Name="Arithmetic1" Content="四则运算" Margin="866,433,0,0" VerticalAlignment="Top" Width="86" Background="White" BorderBrush="#FF7C7878" RenderTransformOrigin="0.001,0.685" IsEnabled="False" Click="Arithmetic1_Click"/>
         <Rectangle HorizontalAlignment="Left" Height="50" Margin="745,522,0,0" Stroke="Black" VerticalAlignment="Top" Width="223"/>
-        <Button x:Name="Print_" Content="打印题目" Margin="756,531,0,0" VerticalAlignment="Top" Width="83" Background="White"/>
-        <Button x:Name="Mistakes" Content="错题本" Margin="872,530,0,0" VerticalAlignment="Top" Width="86" Background="White" Click="Mistakes_Click"/>
+        <ToggleButton x:Name="Print_" Content="打印题目" Margin="756,531,0,0" VerticalAlignment="Top" Width="83" Background="White" Checked="Print__Checked"/>
+        <ToggleButton x:Name="Mistakes" Content="错题本" Margin="872,530,0,0" VerticalAlignment="Top" Width="86" Background="White" Click="Mistakes_Click"/>
         <TextBlock x:Name="Time" HorizontalAlignment="Left" Margin="782,582,0,0" Text="已运行了999999.99分钟" TextWrapping="Wrap" VerticalAlignment="Top"/>
         <TextBlock x:Name="Date" HorizontalAlignment="Left" Margin="828,606,0,0" Text="当前时间" TextWrapping="Wrap" VerticalAlignment="Top"/>
         <TextBlock x:Name="textBlock1" HorizontalAlignment="Left" Margin="812,641,0,0" Text="当前版本号V1.1" TextWrapping="Wrap" VerticalAlignment="Top"/>
-        <Button x:Name="Add" Content="加法" Margin="756,349,0,0" VerticalAlignment="Top" Width="71" Click="Add_Click" IsEnabled="False" Background="White"/>
-        <Button x:Name="Subtract" Content="减法" Margin="878,348,0,0" VerticalAlignment="Top" Width="74" Click="Subtract_Click" IsEnabled="False" Background="White"/>
-        <Button x:Name="button" Content="提交" Margin="627,368,0,0" VerticalAlignment="Top" Click="button_Click" Height="38" Width="80" Background="White"/>
+        <ToggleButton x:Name="Add" Content="加法" Margin="756,349,0,0" VerticalAlignment="Top" Width="71" Click="Add_Click" IsEnabled="False" Background="White" Checked="Add_Checked"/>
+        <ToggleButton x:Name="Subtract" Content="减法" Margin="878,348,0,0" VerticalAlignment="Top" Width="74" Click="Subtract_Click" IsEnabled="False" Background="White" Checked="Subtract_Checked"/>
+        <ToggleButton x:Name="button" Content="提交" Margin="627,368,0,0" VerticalAlignment="Top" Click="button_Click" Height="38" Width="80" Background="White"/>
         <TextBlock x:Name="text1" HorizontalAlignment="Left" Margin="539,245,0,0"  TextWrapping="Wrap" VerticalAlignment="Top"/>
         <TextBlock x:Name="text2" HorizontalAlignment="Left" Margin="539,281,0,0"  TextWrapping="Wrap" VerticalAlignment="Top"/>
         <TextBlock x:Name="text3" HorizontalAlignment="Left" Margin="539,318,0,0"  TextWrapping="Wrap" VerticalAlignment="Top"/>
